--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <!-- Start Nav-->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-transparent main-navigation active scrolled">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-transparent main-navigation">
             <div class="container">
                 <a class="navbar-brand nav-link w-50"
                     onclick="document.querySelector('#top').scrollIntoView({ block: 'start',  behavior: 'smooth' });">
@@ -80,7 +80,6 @@
             <h1 class="container-text-h1-seo">Diseño y Maquetación WEB</h1>
             <h2 class="fw-bold container-text-h2-description text-white">HTML5 - CSS3 - SASS - Bootstrap</h2>
         </div>
-        <i></i>
     </main>
     <!-- End Welcomer-->
     <!-- Start Start -->
