--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     <h3 class="text-center text-dark h5">Completa el formulario y a la brevedad me pondre en contacto.
                     </h3>
                 </div>
-                <form class="col-12 col-lg-7 p-3 section-contact-form" action="sendmail.php" method="POST">
+                <form class="col-12 col-lg-7 p-3 section-contact-form" action="" method="POST">
                     <div class="mb-3">
                         <label for="name" class="form-label visually-hidden text-dark ">Nombre Completo</label>
                         <input type="text"
